asm1/src/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'number'", 
                     "'bool'", "'string'", "'var'", "'dynamic'", "'main'", 
                     "'func'", "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'return'", 
                     "'not'", "'and'", "'or'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'<-'", "'...'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'('", "')'", "'['", "']'", "','", "'\n'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "WS", "NUMBERTYPE", "BOOLTYPE", 
                      "STRINGTYPE", "VARTYPE", "DYNAMICTYPE", "MAIN", "FUNC", 
                      "FOR", "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "RETURN", "NOT", "AND", "OR", 
                      "BOOLLIT", "NUMBERLIT", "STRINGLIT", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "EQUAL", "ASSIGN", "CONCAT", 
                      "STRINGCOMPARE", "NOTEQ", "LT", "MT", "LOEQ", "MOEQ", 
                      "LP", "RP", "LS", "RS", "COMMA", "NEWLINE", "IDENTIFIER", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_mainfunc = 1
    RULE_decllist = 2
    RULE_decl = 3
    RULE_funcdecl = 4
    RULE_paramlist = 5
    RULE_paramprime = 6
    RULE_param = 7
    RULE_numlist = 8
    RULE_primetype = 9
    RULE_stmt = 10
    RULE_vardeclstmt = 11
    RULE_array = 12
    RULE_arrayprime = 13
    RULE_arrayelem = 14
    RULE_assignstmt = 15
    RULE_exprlist = 16
    RULE_ifstmt = 17
    RULE_elifstmtlist = 18
    RULE_elifstmt = 19
    RULE_elsestmt = 20
    RULE_forstmt = 21
    RULE_breakstmt = 22
    RULE_continuestmt = 23
    RULE_returnstmt = 24
    RULE_funccallstmt = 25
    RULE_n_exprlist = 26
    RULE_exprprime = 27
    RULE_blockstmt = 28
    RULE_stmtlist = 29
    RULE_expr = 30
    RULE_expr1 = 31
    RULE_expr2 = 32
    RULE_expr3 = 33
    RULE_expr4 = 34
    RULE_expr5 = 35
    RULE_expr6 = 36
    RULE_operand = 37
    RULE_elemexpr = 38
    RULE_indexop = 39
    RULE_nnls = 40
    RULE_nls = 41

    ruleNames =  [ "program", "mainfunc", "decllist", "decl", "funcdecl", 
                   "paramlist", "paramprime", "param", "numlist", "primetype", 
                   "stmt", "vardeclstmt", "array", "arrayprime", "arrayelem", 
                   "assignstmt", "exprlist", "ifstmt", "elifstmtlist", "elifstmt", 
                   "elsestmt", "forstmt", "breakstmt", "continuestmt", "returnstmt", 
                   "funccallstmt", "n_exprlist", "exprprime", "blockstmt", 
                   "stmtlist", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "operand", "elemexpr", "indexop", "nnls", 
                   "nls" ]

    EOF = Token.EOF
    COMMENT=1
    WS=2
    NUMBERTYPE=3
    BOOLTYPE=4
    STRINGTYPE=5
    VARTYPE=6
    DYNAMICTYPE=7
    MAIN=8
    FUNC=9
    FOR=10
    UNTIL=11
    BY=12
    BREAK=13
    CONTINUE=14
    IF=15
    ELSE=16
    ELIF=17
    BEGIN=18
    END=19
    RETURN=20
    NOT=21
    AND=22
    OR=23
    BOOLLIT=24
    NUMBERLIT=25
    STRINGLIT=26
    ADD=27
    SUB=28
    MUL=29
    DIV=30
    MOD=31
    EQUAL=32
    ASSIGN=33
    CONCAT=34
    STRINGCOMPARE=35
    NOTEQ=36
    LT=37
    MT=38
    LOEQ=39
    MOEQ=40
    LP=41
    RP=42
    LS=43
    RS=44
    COMMA=45
    NEWLINE=46
    IDENTIFIER=47
    UNCLOSE_STRING=48
    ILLEGAL_ESCAPE=49
    ERROR_CHAR=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nnls(self):
            return self.getTypedRuleContext(ZCodeParser.NnlsContext,0)


        def decllist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.DecllistContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.DecllistContext,i)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def mainfunc(self):
            return self.getTypedRuleContext(ZCodeParser.MainfuncContext,0)


        def nls(self):
            return self.getTypedRuleContext(ZCodeParser.NlsContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.nnls()
            self.state = 85
            self.decllist()

            self.state = 86
            self.mainfunc()
            self.state = 87
            self.nls()
            self.state = 89
            self.decllist()
            self.state = 90
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def MAIN(self):
            return self.getToken(ZCodeParser.MAIN, 0)

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def nnls(self):
            return self.getTypedRuleContext(ZCodeParser.NnlsContext,0)


        def stmt(self):
            return self.getTypedRuleContext(ZCodeParser.StmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_mainfunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainfunc" ):
                return visitor.visitMainfunc(self)
            else:
                return visitor.visitChildren(self)




    def mainfunc(self):

        localctx = ZCodeParser.MainfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ZCodeParser.FUNC)
            self.state = 93
            self.match(ZCodeParser.MAIN)
            self.state = 94
            self.match(ZCodeParser.LP)
            self.state = 95
            self.match(ZCodeParser.RP)
            self.state = 96
            self.nnls()
            self.state = 97
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def nls(self):
            return self.getTypedRuleContext(ZCodeParser.NlsContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = ZCodeParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decllist)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.decl()
                self.state = 100
                self.nls()
                self.state = 101
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(ZCodeParser.FuncdeclContext,0)


        def vardeclstmt(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.funcdecl()
                pass
            elif token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE, ZCodeParser.VARTYPE, ZCodeParser.DYNAMICTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.vardeclstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def paramlist(self):
            return self.getTypedRuleContext(ZCodeParser.ParamlistContext,0)


        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def nnls(self):
            return self.getTypedRuleContext(ZCodeParser.NnlsContext,0)


        def stmt(self):
            return self.getTypedRuleContext(ZCodeParser.StmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = ZCodeParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(ZCodeParser.FUNC)
            self.state = 111
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 112
            self.match(ZCodeParser.LP)
            self.state = 113
            self.paramlist()
            self.state = 114
            self.match(ZCodeParser.RP)
            self.state = 115
            self.nnls()
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE, ZCodeParser.VARTYPE, ZCodeParser.DYNAMICTYPE, ZCodeParser.FOR, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.IF, ZCodeParser.BEGIN, ZCodeParser.RETURN, ZCodeParser.IDENTIFIER]:
                self.state = 116
                self.stmt()
                pass
            elif token in [ZCodeParser.NEWLINE]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramprime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = ZCodeParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramlist)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.paramprime()
                pass
            elif token in [ZCodeParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ZCodeParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def paramprime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamprime" ):
                return visitor.visitParamprime(self)
            else:
                return visitor.visitChildren(self)




    def paramprime(self):

        localctx = ZCodeParser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramprime)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.param()
                self.state = 125
                self.match(ZCodeParser.COMMA)
                self.state = 126
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primetype(self):
            return self.getTypedRuleContext(ZCodeParser.PrimetypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LS(self):
            return self.getToken(ZCodeParser.LS, 0)

        def numlist(self):
            return self.getTypedRuleContext(ZCodeParser.NumlistContext,0)


        def RS(self):
            return self.getToken(ZCodeParser.RS, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ZCodeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.primetype()
            self.state = 132
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.LS]:
                self.state = 133
                self.match(ZCodeParser.LS)
                self.state = 134
                self.numlist()
                self.state = 135
                self.match(ZCodeParser.RS)
                pass
            elif token in [ZCodeParser.RP, ZCodeParser.COMMA]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERLIT(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NUMBERLIT)
            else:
                return self.getToken(ZCodeParser.NUMBERLIT, i)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_numlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumlist" ):
                return visitor.visitNumlist(self)
            else:
                return visitor.visitChildren(self)




    def numlist(self):

        localctx = ZCodeParser.NumlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_numlist)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(ZCodeParser.NUMBERLIT)
                self.state = 141
                self.match(ZCodeParser.COMMA)
                self.state = 142
                self.match(ZCodeParser.NUMBERLIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(ZCodeParser.NUMBERLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimetypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERTYPE(self):
            return self.getToken(ZCodeParser.NUMBERTYPE, 0)

        def BOOLTYPE(self):
            return self.getToken(ZCodeParser.BOOLTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(ZCodeParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_primetype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimetype" ):
                return visitor.visitPrimetype(self)
            else:
                return visitor.visitChildren(self)




    def primetype(self):

        localctx = ZCodeParser.PrimetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBERTYPE) | (1 << ZCodeParser.BOOLTYPE) | (1 << ZCodeParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclstmt(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclstmtContext,0)


        def assignstmt(self):
            return self.getTypedRuleContext(ZCodeParser.AssignstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(ZCodeParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ForstmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(ZCodeParser.ContinuestmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnstmtContext,0)


        def funccallstmt(self):
            return self.getTypedRuleContext(ZCodeParser.FunccallstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ZCodeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.vardeclstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.assignstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.ifstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.forstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 152
                self.breakstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 153
                self.continuestmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 154
                self.returnstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 155
                self.funccallstmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 156
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def primetype(self):
            return self.getTypedRuleContext(ZCodeParser.PrimetypeContext,0)


        def DYNAMICTYPE(self):
            return self.getToken(ZCodeParser.DYNAMICTYPE, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def LS(self):
            return self.getToken(ZCodeParser.LS, 0)

        def numlist(self):
            return self.getTypedRuleContext(ZCodeParser.NumlistContext,0)


        def RS(self):
            return self.getToken(ZCodeParser.RS, 0)

        def array(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayContext,0)


        def VARTYPE(self):
            return self.getToken(ZCodeParser.VARTYPE, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_vardeclstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclstmt" ):
                return visitor.visitVardeclstmt(self)
            else:
                return visitor.visitChildren(self)




    def vardeclstmt(self):

        localctx = ZCodeParser.VardeclstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_vardeclstmt)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.NUMBERTYPE, ZCodeParser.BOOLTYPE, ZCodeParser.STRINGTYPE]:
                    self.state = 159
                    self.primetype()
                    pass
                elif token in [ZCodeParser.DYNAMICTYPE]:
                    self.state = 160
                    self.match(ZCodeParser.DYNAMICTYPE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 163
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 167
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.ASSIGN]:
                    self.state = 164
                    self.match(ZCodeParser.ASSIGN)
                    self.state = 165
                    self.expr()
                    pass
                elif token in [ZCodeParser.ELSE, ZCodeParser.ELIF, ZCodeParser.NEWLINE]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.primetype()
                self.state = 170
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 171
                self.match(ZCodeParser.LS)
                self.state = 172
                self.numlist()
                self.state = 173
                self.match(ZCodeParser.RS)
                self.state = 177
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.ASSIGN]:
                    self.state = 174
                    self.match(ZCodeParser.ASSIGN)
                    self.state = 175
                    self.array()
                    pass
                elif token in [ZCodeParser.ELSE, ZCodeParser.ELIF, ZCodeParser.NEWLINE]:
                    pass
                else:
                    raise NoViableAltException(self)

                pass
